# scraper

./: README.md
scraper/: all_jobs.json  pyproject.toml
scraper/scraper/: scraper.py
scraper/tests/: test_scraper.py
